# HemaScope

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  ruff.toml
hemascope/: data.py  explain.py  model.py  predict.py  training.py  vocab.py
labeling/: README.md  make_tasks.py  wbcatt_config.xml
scripts/: attribute_stats.ipynb  audit_unexpected.py  ingest.py  spot_check.py  train.py  train_attr_heads.py  train_class_head.py
